- info.json -> Added created, author, description, and is_live fields. - app_builder.rb -> Generates index page and index.html - app_builder.rb -> Only builds apps with is_live fields. - index.html -> Shows author, version, description, and title of available apps.

--- a/web/render/pages/create_project_brick.html
+++ b/web/render/pages/create_project_brick.html
@@ -94,7 +94,7 @@ bin/gooddata -Ulogin -Ppass -p PROJECT_PID run_ruby --dir create_project_brick/ 
           <div class="mastfoot">
             <br></br>
             <div class="inner">
-              <p align="center" class="lead">Have a cool idea? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
+              <p align="center" class="lead">Have a cool idea? <a href="https://www.gooddata.com">Build a Ruby app</a>.</p>
             </div>
           </div>
 
