--- a/web/render/pages/index.html
+++ b/web/render/pages/index.html
@@ -69,3 +69,49 @@
         <div class="cover-container">
 <br></br>
 <div class="inner cover">
+<div class="hero-unit">
+<h1>Ruby App Executors</h1><p>Packable apps to extend the functionality of your Good Data project or <a href="#"> build your own.</a></p>
+</div>
+<div align="center" class="container"><ul class="thumbnails">
+<li class="span4"><a class="thumbnail" href="create_project_brick.html"><h4>Create Project Brick</h4>
+<p>...</p>
+<small><div style="align:right">Tomas Svarovsky | <cite title="0.0.1">0.0.1</cite></div></small>
+</a></li>
+<li class="span4"><a class="thumbnail" href="download_objects_brick.html"><h4>Download Objects Brick</h4>
+<p>...</p>
+<small><div style="align:right">Tomas Svarovsky | <cite title="0.0.1">0.0.1</cite></div></small>
+</a></li>
+<li class="span4"><a class="thumbnail" href="hello_world.html"><h4>Hello World</h4>
+<p>This brick will load data into a dataset of the project.</p>
+<small><div style="align:right">Tomas Svarovsky | <cite title="0.0.1">0.0.1</cite></div></small>
+</a></li>
+<li class="span4"><a class="thumbnail" href="load_data_brick.html"><h4>Load Data Brick</h4>
+<p>...</p>
+<small><div style="align:right">Tomas Svarovsky | <cite title="0.0.1">0.0.1</cite></div></small>
+</a></li>
+<li class="span4"><a class="thumbnail" href="mass_object_update_brick.html"><h4>Mass Object Update Brick</h4>
+<p>...</p>
+<small><div style="align:right">Tomas Svarovsky | <cite title="0.0.1">0.0.1</cite></div></small>
+</a></li>
+</ul></div>
+          <div class="mastfoot">
+            <br></br>
+            <div class="inner">
+              <p align="center" class="lead">Have a cool idea? <a href="https://www.gooddata.com">Build a Ruby app</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/docs.min.js"></script>
+  </body>
+</html>
