--- a/web/render/pages/mass_object_update_brick.html
+++ b/web/render/pages/mass_object_update_brick.html
@@ -91,7 +91,7 @@ bin/gooddata -Ulogin -Ppass -p PROJECT_PID run_ruby --dir mass_object_update_bri
           <div class="mastfoot">
             <br></br>
             <div class="inner">
-              <p align="center" class="lead">Have a cool idea? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
+              <p align="center" class="lead">Have a cool idea? <a href="https://www.gooddata.com">Build a Ruby app</a>.</p>
             </div>
           </div>
 
