--- a/web/render/pages/download_objects_brick.html
+++ b/web/render/pages/download_objects_brick.html
@@ -92,7 +92,7 @@ bin/gooddata -Ulogin -Ppass -p PROJECT_PID run_ruby --dir download_objects_brick
           <div class="mastfoot">
             <br></br>
             <div class="inner">
-              <p align="center" class="lead">Have a cool idea? <a href="http://getbootstrap.com">Build a Ruby app</a>.</p>
+              <p align="center" class="lead">Have a cool idea? <a href="https://www.gooddata.com">Build a Ruby app</a>.</p>
             </div>
           </div>
 
